--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>English Alphabet</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="icon" href="favicon.ico" type="image/ico" >
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
   <script src="js/main.js"></script>
 </head>
 
